...
                .background(colorScheme.background, shape = RoundedCornerShape(16.dp))
                .padding(16.dp) // Padding around the dialog content
                .testTag("aIAssistantDialog")) {
          Column(
              modifier = Modifier.fillMaxWidth(),
...
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(bottom = 4.dp).testTag("aiAssistantHeaderRow")) {
                      // Icon
                      Box(
...
                                contentDescription = "AI Assistant",
                                tint = Color.White,
                                modifier = Modifier.size(32.dp).testTag("aiAssistantIcon"))
                          }

...
                                              bottomEnd = 18.dp))
                                  .padding(horizontal = 8.dp, vertical = 10.dp)
                                  .testTag("aiAssistantTitleBox")) {
                            Text(
                                text = "Your AI-Powered Assistant",
...
                    textAlign = TextAlign.Center,
                    color = colorScheme.onBackground,
                    modifier = Modifier.padding(vertical = 16.dp).testTag("aiAssistantDescription"))

                // Buttons
...
                              ButtonDefaults.buttonColors(
                                  containerColor = Secondary, contentColor = OnSecondary),
                          modifier = Modifier.testTag("uploadPicturesButton")) {
                            Text("Upload Pictures")
                            Spacer(modifier = Modifier.width(4.dp))
...
                              ButtonDefaults.buttonColors(
                                  containerColor = Primary, contentColor = OnPrimary),
                          modifier = Modifier.testTag("cancelButton") // Space between buttons
                          ) {
                            Text("Enter Details Manually")
...
              .padding(16.dp)
              .verticalScroll(rememberScrollState())
              .testTag("imagePickerStep")) {
        StepHeader(R.drawable.circle_one_icon, title = "Upload Images")

...
              color = OnBackground,
              textAlign = TextAlign.Center,
              modifier = Modifier.fillMaxWidth().testTag("noImagesText"))
        } else {
          LazyRow(
...
                                .clickable { onRemoveImage(uri) }
                                .padding(4.dp)
                                .testTag("removeImageButton")) {
                              Icon(
                                  Icons.Default.Delete,
...
                          containerColor = Primary, contentColor = OnPrimary),
                  modifier =
                      Modifier.weight(1f).testTag("addImagesButton") // Ensures centering in the row
                  ) {
                    Text("Add Images")
...
          color = colorScheme.background,
          contentColor = colorScheme.onBackground,
          modifier = Modifier.padding(16.dp).testTag("multiStepDialog")) {
            when (currentStep) {
              1 ->
...
                        CircularProgressIndicator(
                            color = Primary,
                            modifier = Modifier.size(48.dp).testTag("stepTwoProgressBar"))
                        Spacer(modifier = Modifier.height(16.dp))
                        Text(
...
                          contentDescription = "Complete",
                          tint = Secondary,
                          modifier = Modifier.size(48.dp).testTag("stepThreeIcon"))
                      Spacer(modifier = Modifier.height(16.dp))
                      Text(
...
                          textAlign = TextAlign.Center,
                          color = colorScheme.onBackground,
                          modifier = Modifier.padding(horizontal = 8.dp).testTag("completionNote"))
                      Spacer(modifier = Modifier.height(16.dp))
                      // New Proceed Button
...
                              Modifier.fillMaxWidth()
                                  .padding(horizontal = 32.dp)
                                  .testTag("proceedButton"),
                          colors =
                              ButtonDefaults.buttonColors(
...
