...
fun TitleInput(title: String, onTitleChange: (String) -> Unit) {
  OutlinedTextField(
      value = title,
      onValueChange = onTitleChange,
      label = { Text("Title") },
      placeholder = { Text("Name your Request") },
      modifier = Modifier.fillMaxWidth().testTag("inputRequestTitle"),
      colors = OutlinedTextFieldDefaults.colors(unfocusedContainerColor = Color.Transparent))
}

@Composable
fun DescriptionInput(description: String, onDescriptionChange: (String) -> Unit) {
  OutlinedTextField(
      value = description,
      onValueChange = onDescriptionChange,
      label = { Text("Description") },
      placeholder = { Text("Describe your request") },
      modifier = Modifier.fillMaxWidth().height(150.dp).testTag("inputRequestDescription"),
      colors = OutlinedTextFieldDefaults.colors(unfocusedContainerColor = Color.Transparent))
}

@Composable
fun ServiceTypeDropdown(
    typeQuery: String,
...
          onTypeQueryChange(it)
          onShowDropdownTypeChange(true)
        },
        label = { Text("Service Type") },
        placeholder = { Text("Select a Service Type") },
        modifier =
            Modifier.fillMaxWidth().testTag("inputServiceType").onFocusChanged { focusState ->
              if (!focusState.isFocused) onShowDropdownTypeChange(false)
            },
        singleLine = true)

    DropdownMenu(
        expanded = showDropdownType,
...
        modifier =
            Modifier.fillMaxWidth()
                .heightIn(max = 200.dp)
                .background(MaterialTheme.colorScheme.surface)
                .border(1.dp, MaterialTheme.colorScheme.onSurface, shape = RoundedCornerShape(8.dp))
                .padding(start = 8.dp, end = 8.dp)
                .testTag("serviceTypeMenu")) {
          filteredServiceTypes.forEach { serviceType ->
            DropdownMenuItem(
                modifier = Modifier.testTag("serviceTypeResult"),
                text = {
                  Text(
                      serviceType.name
                          .replace("_", " ")
                          .lowercase(Locale.getDefault())
                          .replaceFirstChar { it.uppercase(Locale.getDefault()) })
...
        onValueChange = {
          onLocationQueryChange(it)
          onShowDropdownLocationChange(true)
        },
        label = { Text("Address") },
        placeholder = { requestLocation?.name?.let { Text(it) } ?: Text("Enter your address") },
        modifier = Modifier.fillMaxWidth().testTag("inputRequestAddress"),
        singleLine = true)

    DropdownMenu(
        expanded = showDropdownLocation && locationSuggestions.isNotEmpty(),
        onDismissRequest = { onShowDropdownLocationChange(false) },
        properties = PopupProperties(focusable = false),
...
                .heightIn(max = 200.dp)
                .background(MaterialTheme.colorScheme.surface)
                .border(1.dp, MaterialTheme.colorScheme.onSurface, shape = RoundedCornerShape(8.dp))
                .padding(start = 8.dp, end = 8.dp)) {
          locationSuggestions.forEach { location ->
            DropdownMenuItem(
                modifier = Modifier.padding(start = 8.dp, end = 8.dp).testTag("locationResult"),
                text = {
                  Text(
                      text = location.name.take(50) + if (location.name.length > 50) "..." else "",
                      maxLines = 1)
                },
                onClick = {
...
fun DueDateInput(dueDate: String, onDueDateChange: (String) -> Unit) {
  OutlinedTextField(
      value = dueDate,
      onValueChange = onDueDateChange,
      label = { Text("What is the deadline for this request?") },
      placeholder = { Text("--/--/----") },
      modifier = Modifier.fillMaxWidth().testTag("inputRequestDate"),
      colors = OutlinedTextFieldDefaults.colors(unfocusedContainerColor = Color.Transparent))
}

@Composable
fun ImagePicker(
    selectedImageUri: Uri?,
...
      onClick = { imagePickerLauncher.launch("image/*") },
      modifier =
          Modifier.fillMaxWidth()
              .height(150.dp)
              .border(1.dp, Color.Gray, shape = RoundedCornerShape(8.dp)) // Added grey border
              .background(Color.Transparent)
              .testTag("imagePickerButton"),
      colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
      content = {
        if (selectedImageUri == null && imageUrl == null) {
          Row(
              verticalAlignment = Alignment.CenterVertically,
              horizontalArrangement = Arrangement.Center,
...
