...
 */
@SuppressLint("SourceLockedOrientationActivity")
@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun RequestScreen(
    navigationActions: NavigationActions,
    screenTitle: String,
    title: String,
    onTitleChange: (String) -> Unit,
    description: String,
    onDescriptionChange: (String) -> Unit,
    typeQuery: String,
    onTypeQueryChange: (String) -> Unit,
...
            painterResource(
                id =
                    if (isSystemInDarkTheme()) R.drawable.bg_request_dark
                    else R.drawable.bg_request),
        contentDescription = null,
        contentScale = ContentScale.Crop,
        modifier = Modifier.fillMaxSize().testTag("requestBackground"))

    Scaffold(
        modifier = Modifier.padding(16.dp).testTag("requestScreen"),
        containerColor = Color.Transparent,
        topBar = {
          TopAppBarInbox(
...
                    onLocationSelected = onLocationSelected,
                    requestLocation = selectedRequest?.location,
                    isValueOk = selectedLocation != null)
                DatePickerFieldToModal(dueDate = dueDate, onDateChange = onDueDateChange)
                Button(
                    onClick = onSubmit,
                    modifier = Modifier.height(50.dp).testTag("requestSubmit"),
                    shape = RoundedCornerShape(25.dp),
                    enabled =
                        title.isNotBlank() &&
                            description.isNotBlank() &&
                            dueDate.isNotBlank() &&
                            selectedLocation != null,
...
